--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "stylus": "^0.54.5",
+    "stylus-loader": "^2.3.1",
     "vue": "^2.0.1"
   },
   "devDependencies": {
